prepared for testing of loading

--- a/sandbox.client/front/ts/app/clients_list/clients-list-component.html
+++ b/sandbox.client/front/ts/app/clients_list/clients-list-component.html
@@ -30,6 +30,8 @@
         </select> входов
     </label>
 
+    <button (click)="loadReport()">Загрузить полный список</button>
+
     <div class="col-md-10">
     <table class="table table-hover" id="clientsListTable">
         <thead>
