changed interaction between controller and db for ReportView

--- a/sandbox.client/front/ts/app/clients_list/clients-list-component.html
+++ b/sandbox.client/front/ts/app/clients_list/clients-list-component.html
@@ -190,7 +190,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-primary" id="modal-form-submit">{{formsBtn}}</button>
-                    <button id="cancel-modal-submit" type="button" class="btn btn-default" data-dismiss="modal" onclick="document.getElementById('id01').style.display='none'">Отмена</button>
+                    <button id="cancel-modal-submit" type="button" class="btn btn-default" data-dismiss="modal" onclick="documentPdf.getElementById('id01').style.display='none'">Отмена</button>
                 </div>
             </div>
             </form>
