--- a/sandbox.client/front/ts/app/clients_list/clients-list-component.html
+++ b/sandbox.client/front/ts/app/clients_list/clients-list-component.html
@@ -137,8 +137,8 @@
                 <label for="inputCharm">Характер</label>
                 <select class="form-control" id="inputCharm"
                         required
-                        [(ngModel)]="clientRecords.charm.name" name="charm">
-                  <option *ngFor="let charm of charms" [ngValue]="charm">{{charm}}</option>
+                        [(ngModel)]="clientRecords.charm.id" name="charm">
+                  <option *ngFor="let charm of charms" [ngValue]="charm.id">{{charm.name}}</option>
                 </select>
               </div>
               <div class="form-group col-md-3">
@@ -220,7 +220,7 @@
           <div class="modal-footer">
             <button type="submit" class="btn btn-primary" id="modal-form-submit">{{formsBtn}}</button>
             <button id="cancel-modal-submit" type="button" class="btn btn-default" data-dismiss="modal"
-                    onclick="documentPdf.getElementById('id01').style.display='none'">Отмена
+                    onclick="document.getElementById('id01').style.display='none'">Отмена
             </button>
           </div>
         </div>
